@@ -2,16 +2,12 @@ package org.example.service;
 
 import lombok.RequiredArgsConstructor;
 import org.example.dao.ProductDao;
-import org.example.dao.ProductDaoImpl;
 import org.example.dto.InfoProductDto;
 import org.example.dto.ProductDto;
 import org.example.entity.Product;
 import org.example.exception.ProductNotFoundException;
 import org.example.mapper.ProductMapper;
-import org.example.mapper.ProductMapperImpl;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -32,11 +28,16 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public List<InfoProductDto> getAll() {
-        List<Product> productDtos = productDao.findAll();
-        return productDtos.stream()
+    public List<InfoProductDto> getAll(int page, int pageSize) {
+        List<Product> allProducts = productDao.findAll();
+        int offset = page * pageSize;
+        List<Product> productsOnPage = allProducts.stream()
+                .skip(offset)
+                .limit(pageSize)
+                .toList();
+        return productsOnPage.stream()
                 .map(mapper::toInfoProductDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
